# stm32_blue_pill

./: .gitignore  Cargo.toml  memory.x  openocd.cfg  start.bat  tasks.json
.cargo/: config.toml
src/: main.rs
