[package]
name = "stm32_blue_pill"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "1.0.0"
stm32f1xx-hal = {version = "0.10.0", features = ["stm32f103", "rt"]}
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"

[[bin]]
name = "stm32_blue_pill"
test = false
bench = false

[profile.release]
codegen-units = 1
# incremental = false
# debug = true
lto = true
# opt-level = "s"
panic = "abort"